--- a/style.css
+++ b/style.css
@@ -11,28 +11,28 @@
 }
 @font-face {
     font-family: 'HankenGrotesk'; /* Define the font family name */
-    src: url('/results-summary-component-main/assets/fonts/HankenGrotesk-VariableFont_wght.ttf') format('truetype');
+    src: url('./assets/fonts/HankenGrotesk-VariableFont_wght.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'HankenGrotesk';
-    src: url('/results-summary-component-main/assets/fonts/static/HankenGrotesk-Bold.ttf') format('truetype');
+    src: url('./assets/fonts/static/HankenGrotesk-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'HankenGrotesk';
-    src: url('/results-summary-component-main/assets/fonts/static/HankenGrotesk-ExtraBold.ttf') format('truetype');
+    src: url('./assets/fonts/static/HankenGrotesk-ExtraBold.ttf') format('truetype');
     font-weight: 800; /* ExtraBold weight */
     font-style: normal;
 }
 
 @font-face {
     font-family: 'HankenGrotesk';
-    src: url('/results-summary-component-main/assets/fonts/static/HankenGrotesk-Medium.ttf') format('truetype');
+    src: url('./assets/fonts/static/HankenGrotesk-Medium.ttf') format('truetype');
     font-weight: 500; /* Medium weight */
     font-style: normal;
 }
